--- a/index.html
+++ b/index.html
@@ -1,13 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-  </head> 
-  <body>
-    
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- font-awesome CDN -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <!-- google-fonts CDN -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <!-- custom CSS -->
+  <link rel="stylesheet" href="styles.css">
+  <title>Document</title> 
+</head>
+<body>
+  <!-- main page -->
+  <section>
+    <!-- left -->
+    <!-- wrapper of entire left side -->
+    <div class="left">
+      <!-- wrapper of left-content -->
+      <div class="left-content">
+         <div>
+           <i class="fas fa-search"></i>
+           <h3 class="left-content-heading">Find your interests</h3>
+         </div>
+         <div>
+          <i class="fas fa-user-friends"></i>
+          <h3 class="left-content-heading">Explore what people are talking about</h3>
+        </div>
+        <div>
+          <i class="fas fa-comment"></i>
+          <h3 class="left-content-heading">Join the people</h3>
+        </div>
+      </div>
+    </div>
+    <!-- end of left -->
+    <!-- right -->
+    <!-- wrapper of entire right side -->
+    <div class="right">
+      <!-- wrapper of right-content -->
+      <div class="right-content">
+         <form class="right-content-form">
+           <input type="text" class="user-info" placeholder="Phone, email, or username">
+           <div>
+             <input type="password" class="password" placeholder="Password">
+             <label>Forgot Password?</label>
+           </div>
+           <button type="button" class="btn-top">Log in</button>
+         </form>
+         <div class="middle-content">
+           <i class="fas fa-dove"></i>
+           <h1>explore what's happening in the world</h1>
+           <h4>Join Twitter today</h4>
+           <button type="button" class="sign-up">Sign Up</button>
+           <button type="button" class="log-in">Log In</button>
+         </div>
+      </div>
+    </div>
+    <!-- end of right -->
+    <!-- footer -->
+    <footer class="main-page-footer">
+      <ul>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Help</a></li>
+        <li><a href="#">Terms</a></li>
+        <li><a href="#">Apps</a></li>
+        <li><a href="#">Settings</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Status</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Brand</a></li>
+        <li><a href="#">Developers</a></li>
+        <li><a href="#">&copy; 2022 Twitter</a></li>
+      </ul>
+    </footer>
+    <!-- end of footer -->
+  </section>
+  <!-- end of main page -->
+</body>
 </html>
