--- a/index.html
+++ b/index.html
@@ -11,28 +11,28 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
   <!-- custom CSS -->
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
   <title>Document</title> 
 </head>
 <body>
   <!-- main page -->
-  <section>
+  <section class="main-page">
     <!-- left -->
     <!-- wrapper of entire left side -->
     <div class="left">
       <!-- wrapper of left-content -->
       <div class="left-content">
-         <div>
-           <i class="fas fa-search"></i>
-           <h3 class="left-content-heading">Find your interests</h3>
-         </div>
-         <div>
-          <i class="fas fa-user-friends"></i>
-          <h3 class="left-content-heading">Explore what people are talking about</h3>
+        <div>
+          <i class="fas fa-search"></i>
+          <h3 class="left-content-heading">Find your interests</h3>
         </div>
         <div>
-          <i class="fas fa-comment"></i>
-          <h3 class="left-content-heading">Join the people</h3>
+        <i class="fas fa-user-friends"></i>
+        <h3 class="left-content-heading">Explore what people are talking about</h3>
+        </div>
+        <div>
+        <i class="fas fa-comment"></i>
+        <h3 class="left-content-heading">Join the people</h3>
         </div>
       </div>
     </div>
@@ -40,8 +40,6 @@
     <!-- right -->
     <!-- wrapper of entire right side -->
     <div class="right">
-      <!-- wrapper of right-content -->
-      <div class="right-content">
          <form class="right-content-form">
            <input type="text" class="user-info" placeholder="Phone, email, or username">
            <div>
@@ -52,12 +50,11 @@
          </form>
          <div class="middle-content">
            <i class="fas fa-dove"></i>
-           <h1>explore what's happening in the world</h1>
+           <h1>Explore what's happening in the world</h1>
            <h4>Join Twitter today</h4>
            <button type="button" class="sign-up">Sign Up</button>
            <button type="button" class="log-in">Log In</button>
          </div>
-      </div>
     </div>
     <!-- end of right -->
     <!-- footer -->
