--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
   <!-- custom CSS -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">              
   <title>Document</title> 
 </head>
 <body>
@@ -52,8 +52,8 @@
            <i class="fas fa-dove"></i>
            <h1>Explore what's happening in the world</h1>
            <h4>Join Twitter today</h4>
-           <button type="button" class="sign-up">Sign Up</button>
-           <button type="button" class="log-in">Log In</button>
+           <button type="button" class="sign-up main-btn">Sign Up</button>
+           <button type="button" class="log-in main-btn">Log In</button>
          </div>
     </div>
     <!-- end of right -->
@@ -94,8 +94,8 @@
       <div class="login-content">
         <h2>Log in to Twitter</h2>
         <form class="login-form">
-          <input type="text" placeholder="Phone, email, or username">
-          <input type="password" placeholder="Password">
+          <input type="text" placeholder="Phone, email, or username" class="login-user-info">
+          <input type="password" placeholder="Password" class="login-password">
           <div>
             <button class="login-form-btn" type="button">Log In</button>
             <input type="checkbox" class="login-form-checkbox" id="check">
@@ -110,6 +110,12 @@
         </footer>
     </div>
     <!-- end of login -->
+    <!-- login modal -->
+    <div class="login-modal">
+      <i class="fas fa-times"></i>
+      <p>The username and password you entered did not match our records. Please double check and try again</p>
+    </div>
+    <!-- end of login modal -->
   </section>
   <!-- end of login page -->
 
@@ -322,5 +328,6 @@
   </section>
   <!-- end of feeds page -->
 
+  <script src="script.js"></script>
 </body>
 </html>
