--- a/index.html
+++ b/index.html
@@ -15,11 +15,23 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Twirrer</title>
+    <title>Twitter</title>
   </head>
   <body>
+    
+    <!-- pages navigation -->
+    <div class="pages-navigation">
+      <ul>
+        <li>Navigate b/w pages -----></li>
+        <li>Main-page</li>
+        <li>Login-page</li>
+        <li>Feeds-page</li>
+      </ul>
+    </div>
+    <!-- end of pages navigation -->
+
     <!-- main page -->
-    <section class="main-page">
+    <section class="main-page" id="main-page">
       <!-- left -->
       <div class="left">
         <div class="left-content">
@@ -57,7 +69,7 @@
         <div class="middle-content">
           <i class="fas fa-dove"></i>
           <h1>Explore what's hapenning in the world</h1>
-          <h4>Join Twirrer today</h4>
+          <h4>Join Twitter today</h4>
           <button type="button" class="sign-up main-btn">Sign Up</button>
           <button type="button" class="log-in main-btn">Log In</button>
         </div>
@@ -77,7 +89,7 @@
           <li><a href="#">Privacy Policy</a></li>
           <li><a href="#">Brand</a></li>
           <li><a href="#">Developers</a></li>
-          <li><a href="#">&copy; 2019 Twirrer</a></li>
+          <li><a href="#">&copy; 2019 Twitter</a></li>
         </ul>
       </footer>
       <!-- end of footer -->
@@ -85,7 +97,7 @@
     <!-- end of main page -->
 
     <!-- login page -->
-    <section class="login-page">
+    <section class="login-page" id="login-page">
       <!-- login page nav -->
       <nav class="login-page-nav">
         <ul>
@@ -100,7 +112,7 @@
       <!-- login -->
       <div class="login">
         <div class="login-content">
-          <h2>Log in to Twirrer</h2>
+          <h2>Log in to Twitter</h2>
           <form class="login-form">
             <input
               type="text"
@@ -121,9 +133,9 @@
           </form>
         </div>
         <footer class="login-footer">
-          <p>New to Twirrer? <a href="#">Sign up now</a></p>
+          <p>New to Twitter? <a href="#">Sign up now</a></p>
           <p>
-            Already using Twirrer via text message?
+            Already using Twitter via text message?
             <a href="#">Activate your account</a>
           </p>
         </footer>
